# ferry-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: test.yml
assets/js/: main.ts  theme_switcher.ts
docker/: entrypoint.sh  start.sh
docker/nginx/: Dockerfile  nginx.conf
docker/web/: Dockerfile  start.sh
ferry/: conftest.py
ferry/accounts/: admin.py  apps.py  conftest.py  factories.py  forms.py  middleware.py  models.py  oauth.py  repository.py  urls.py  views.py
ferry/accounts/api/: __init__.py  schema.py  serializers.py  views.py
ferry/accounts/migrations/: 0001_initial.py  0002_add_api_token_model.py  0003_alter_apitoken_is_active.py  0004_enable_linking_user_to_person.py  0005_move_person_table.py  0006_add_name_to_api_tokens.py  0007_add_autopub_toggle.py
ferry/accounts/templatetags/: api_tags.py
ferry/accounts/tests/: test_api.py  test_api_user_views.py  test_people_views.py
ferry/api/: api.py  apps.py
ferry/api/routers/: accusations.py  consequences.py  people.py  ratifications.py  users.py
ferry/api/schema/: users.py
ferry/api/tests/: test_accusation_views.py  test_consequence_views.py  test_people_views.py  test_ratification_views.py  test_user_views.py
ferry/api_legacy/: api.py  apps.py
ferry/api_legacy/routers/: accusations.py  consequences.py  people.py  ratifications.py  users.py
ferry/api_legacy/schema/: court.py  users.py
ferry/api_legacy/tests/: test_accusation_views.py  test_consequence_views.py  test_people_views.py  test_ratification_views.py  test_user_views.py
ferry/core/: api.py  asgi.py  discord.py  exceptions.py  http.py  mixins.py  permissions.py  schema.py  settings.py  urls.py  wsgi.py
ferry/core/api/: auth.py  router.py
ferry/core/settings/: base.py  dev.py  local.py.example  prod.py  test.py
ferry/court/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
ferry/court/api/: schema.py  serializers.py  views.py
ferry/court/api/views/: __init__.py  accusations.py  consequences.py  people.py  ratifications.py
ferry/court/migrations/: 0001_initial.py  0002_add_api_token_model.py  0003_alter_person_discord_id_alter_person_display_name.py  0004_move_person_table.py  0005_ensure_sentences_are_unique.py
ferry/court/tests/: test_models.py  utils.py
ferry/court/tests/api/: test_accusation_views.py  test_consequence_views.py  test_people_views.py  test_ratification_views.py
ferry/dashboard/: apps.py  urls.py  views.py
ferry/pub/: admin.py  apps.py  forms.py  models.py  repository.py  urls.py  views.py
ferry/pub/api/: serializers.py  views.py
ferry/pub/migrations/: 0001_initial.py  0002_add_discord_id_to_pub_event.py  0003_remove_pubevent_unique_date_per_pub.py  0004_pub_event_rsvp.py  0005_add_rsvp_method.py  0006_fix_rsvp_constraint.py  0006_pub_event_ordering.py  0007_add_pub_booking_model.py  0008_add_manual_entry.py  0009_add_extra_info_model.py
ferry/static/js/: theme_switcher.js
ferry/templates/: api_index.html  base.html  base_home.html  base_profile.html  home.html
ferry/templates/accounts/: api_token_create.html  api_tokens.html  api_tokens__table_row.html  person_detail.html  person_list.html  profile.html  unlinked.html
ferry/templates/court/: consequence_create.html  consequence_list.html  consequence_list__table_row.html  person.html  recent-accusations.html  scoreboard.html
ferry/templates/dashboard/: recent-accusations.html  scoreboard.html
ferry/templates/inc/: accusation-card.html  breadcrumbs.html  messages.html  nav-theme-switcher.html  nav.html
ferry/templates/pub/: event_detail.html  event_list.html  event_list__table_row.html  event_manual_rsvp.html
ferry/templates/pub/inc/: booking_details.html  event_details.html
