[tool.poetry]
name = "ferry"
version = "0.1.0"
description = ""
authors = ["Dan Trickey <git@trickey.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "~5.1"
django-stubs-ext = "^5"
requests = "^2.31.0"
rules = "^3.3"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
django-filter = "^24.3"
authlib = "^1.3.2"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
psycopg = "^3.1.18"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.8.0"
djhtml = "^3.0.6"
mypy = "^1.7.0"
django-coverage-plugin = "^3.1.0"
django-stubs = {version = "^5", extras = ["compatible-mypy"]}
factory-boy = "^3.3.0"
types-requests = "^2.31.0.20240125"
time-machine = "^2.13.0"
djangorestframework-stubs = "^3.15.0"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "DJ",
    "DTZ",
    "E",
    "F",
    "FA",
    "FBT",
    "I",
    "N",
    "S",
    "T10",
    "UP",
    "W",
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "B009",    # Do not call `getattr` with a constant attribute value.
    "COM812",  # Conflicts with formatter
    "N999",    # Invalid module name
    "S101",    # S101 Use of `assert` detected
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

warn_unused_ignores = true

strict_optional = true
no_implicit_optional = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["authlib.*", "crispy_forms.*", "django_filters.*", "factory.*", "rules.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["*.tests.*"]
disable_error_code = ["arg-type"]

[tool.django-stubs]
django_settings_module = "ferry.core.settings.test"

[tool.coverage.run]
plugins = [
    'django_coverage_plugin',
]

omit = [
    "ferry/wsgi.py",
    "ferry/asgi.py",
    "*/migrations/*",
    "*/tests/*",
]

[tool.coverage.django_coverage_plugin]
template_extensions = 'html, txt, tex, email'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"